--- a/style/main.mobile.css
+++ b/style/main.mobile.css
@@ -11,7 +11,7 @@
 	}
 
 	.header .right {
-		margin-top: -50px;
+		margin-top: -80px;
 	}
 
 	.header .inspiration h1 {
